Restyled giftstart squares at bottom of home - made them full bleed, fixed large display double row bug

--- a/client/scripts/home/giftstart-squares.sass
+++ b/client/scripts/home/giftstart-squares.sass
@@ -2,27 +2,29 @@
 
 
 #giftstart-squares
-  text-align: left
-  width: 110%
+  text-align: center
+  width: 100vw
+  margin-left: 50%
+  +transform(translateX(-50%))
   div.column
     display: inline-block
   div.column.one
-    width: 12vw
+    width: 16.6666666vw
   div.column.two
-    width: 24vw
+    width: 33.333333vw
   div.column.three
-    width: 36vw
+    width: 50vw
   div.giftstart-square.big
-    height: 23.99vw
-    width: 23.99vw
+    height: 33.3vw
+    width: 33.333333vw
     p
       font-size: 1.5em
   div.giftstart-square
     vertical-align: bottom
     padding: 0.25em
     position: relative
-    height: 12vw
-    width: 12vw
+    height: 16.6666666vw
+    width: 16.6666666vw
     display: inline-block
 
     div.square-overlay
